# ChangeLog for app-portage/gentoolkit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.177 2010/01/11 18:57:19 fuzzyray Exp $

  11 Jan 2010; Paul Varner <fuzzyray@gentoo.org> gentoolkit-9999.ebuild:
  Fix previous commit.

  11 Jan 2010; Paul Varner <fuzzyray@gentoo.org> gentoolkit-9999.ebuild:
  Apply fix for eclean-dist/eclean-pkg symlinks to gentoolkit-9999 (bug
  #300070).

*gentoolkit-0.3.0_rc8-r1 (11 Jan 2010)

  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gentoolkit-0.3.0_rc8-r1.ebuild:
  Fix eclean-dist and eclean-pkg symlinks (bug #300070).

*gentoolkit-0.3.0_rc8 (06 Jan 2010)

  06 Jan 2010; Paul Varner <fuzzyray@gentoo.org>
  -gentoolkit-0.3.0_rc5.ebuild, -gentoolkit-0.3.0_rc6.ebuild,
  +gentoolkit-0.3.0_rc8.ebuild:
  gentoolkit-0.3.0_rc8 version bump. Bug 237964 tracks changes to
  gentoolkit-0.3.0.
  Dropped keywords for ~m68k ~s390 ~sh ~sparc-fbsd ~x86-fbsd in
  gentoolkit-0.3.0_rc8 due to new runtime dependency on app-misc/realpath.
  Removed older unused ebuilds.

  10 Dec 2009; Paul Varner <fuzzyray@gentoo.org> gentoolkit-9999.ebuild:
  Modify live ebuild to use setup.py to set the version of gentoolkit
  installed.

  05 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gentoolkit-0.3.0_rc7.ebuild, gentoolkit-9999.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  28 Oct 2009; Christian Ruppert <idl0r@gentoo.org> gentoolkit-9999.ebuild:
  Add app-misc/realpath dependency wrt r696.

  28 Aug 2009; Paul Varner <fuzzyray@gentoo.org>
  -files/gentoolkit-0.2.3-r1-equery.patch, -gentoolkit-0.2.4_pre8.ebuild,
  -gentoolkit-0.2.4.2-r1.ebuild, -files/equery-0.2.4.2_use_expanded.patch:
  Remove no longer needed versions.

  18 Aug 2009; Robert Buchholz <rbu@gentoo.org> gentoolkit-0.3.0_rc7.ebuild:
  Update postinst message with changes to glsa-check

  13 Jul 2009; Joseph Jezak <josejx@gentoo.org> gentoolkit-0.2.4.5.ebuild: