@@ -5,6 +5,6 @@ AUX gentoolkit-0.3.0_rc8-setup-prefix.patch 911 RMD160 6b651b984c512e1821696070c
 DIST gentoolkit-0.3.0_rc7.tar.gz 100911 RMD160 076aca565a17f40c6087c90b4c568599248f6d01 SHA1 a34ae83de968be7a8a61b1bb660c199bbb94005a SHA256 856f2372bd6e9315dd094a7860d56fbeb6f319e3075277f969eb1e4e13843d0c
 DIST gentoolkit-0.3.0_rc8.tar.gz 118976 RMD160 db7f8660f451a9489466e5de76bafd1a7cb38061 SHA1 ce717ef1215f5f144b76662aeca3ba3fcf102cf2 SHA256 36c69107a849b3d598c3c100fbeaa596a9cbc0f51398b7061b462e9ca8b1aa5c
 EBUILD gentoolkit-0.3.0_rc7.ebuild 3343 RMD160 26730bf85d31cde3f7179fba4db3d05a662f56c4 SHA1 ffd1464ed3d3f5f89dc6eb7571e8e94bccf2cf4e SHA256 a7ed66ed8295d97d263cec2691ef6cf6b43fa63e0b5b337ee5434e56689db124
-EBUILD gentoolkit-0.3.0_rc8-r1.ebuild 3342 RMD160 04bfae46dfc0715f27d215e0e65a8ffe9a6b87c4 SHA1 9c8481c00d3a7f744ff478a1adebd4942fe88db2 SHA256 c17074e3a44a352d879f2fc1fd33fb5f86018238651ca46e8ca36a42a86aa9c3
-MISC ChangeLog 53591 RMD160 24f5e6f3140868da2284e01f9b71df2e4c9e9e17 SHA1 0dbc67908ed2d091ad98dbd4968cf6c3c12b431c SHA256 4d87d1c466f9526e86e77bd2e0efbd584c344c2f7917154ba7e8aa1e937ab07f
+EBUILD gentoolkit-0.3.0_rc8-r1.ebuild 3483 RMD160 b9a74a5e377dd3c5056c100cd369e941997f786f SHA1 2b0647528bdfe2c0632c428337b7f0b4c6b68159 SHA256 7168a37dbb157c1d2ab8b03e9c28f4b254b0125be02095af22a22a1b75fa7fcf
+MISC ChangeLog 53767 RMD160 5819460f640ab3f5554acf215db5530929ec1280 SHA1 f03ee1b1a2fa30ef0ac308deff00cc37b26f0967 SHA256 99ac9a2dfffae3fd5c545a626295f2e2aca1a9b874c45e275fbcbea1276f147c
 MISC metadata.xml 451 RMD160 b1cce9123da273149c731793696937f9b3d02c60 SHA1 6126c34edcb6ed5f4274e060881378cc1cf10757 SHA256 1a2def4d28f69d6bffeb0b09e97ce53e6822e457d5d9308000a1010dca32abeb
